--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,4 +69,7 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+logger.securesocial=DEBUG
+
+include "securesocial.conf"
 
