--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,11 @@ db.default.url="jdbc:h2:mem:play"
 db.default.user=sa
 db.default.password=""
 
+db.test.driver=org.h2.Driver
+db.test.url="jdbc:h2:mem:play"
+db.test.user=sa
+db.test.password=""
+
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
